--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,107 @@
-asttokens==2.4.1
-bleach==6.1.0
-blinker==1.8.2
-Brlapi==0.8.3
-certifi==2024.8.30
-chardet==4.0.0
-chrome-gnome-shell==0.0.0
-click==8.1.7
-colorama==0.4.4
-comm==0.2.2
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-debugpy==1.8.5
-decorator==5.1.1
-defer==1.0.6
-distro==1.7.0
-exceptiongroup==1.2.2
-executing==2.1.0
-Flask==3.0.3
-hidpidaemon==18.4.6
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-ipykernel==6.29.5
-ipython==8.27.0
-itsdangerous==2.2.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.4
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kaggle==1.6.17
-kernelstub==3.1.4
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-louis==3.20.0
-macaroonbakery==1.3.1
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-meson==0.61.2
-more-itertools==8.10.0
-nest-asyncio==1.6.0
-netaddr==0.8.0
-netifaces==0.11.0
-numpy==2.1.1
-oauthlib==3.2.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
-platformdirs==4.2.2
-pop-transition==1.1.2
-prompt_toolkit==3.0.47
-protobuf==3.12.4
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycairo==1.20.1
-pycups==2.0.1
-pydbus==0.6.0
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-python-apt==2.4.0+ubuntu2
-python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
-python-gnupg==0.4.8
-python-slugify==8.0.4
-python-xlib==0.29
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==26.2.0
-repolib==2.2.1
-repoman==1.4.0
-requests==2.25.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-sessioninstaller==0.0.0
-six==1.16.0
-stack-data==0.6.3
-systemd-python==234
-text-unidecode==1.3
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-urllib3==1.26.5
-wadllib==1.3.6
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.4
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+asttokens
+bleach
+blinker
+Brlapi
+certifi
+chardet
+chrome-gnome-shell
+click
+colorama
+comm
+command-not-found
+cryptography
+cupshelpers
+dbus-python
+debugpy
+decorator
+defer
+distro
+exceptiongroup
+executing
+Flask
+hidpidaemon
+httplib2
+idna
+importlib-metadata
+ipykernel
+ipython
+itsdangerous
+jedi
+jeepney
+Jinja2
+jupyter_client
+jupyter_core
+kaggle
+kernelstub
+keyring
+language-selector
+launchpadlib
+lazr.restfulclient
+lazr.uri
+louis
+macaroonbakery
+MarkupSafe
+matplotlib-inline
+meson
+more-itertools
+nest-asyncio
+netaddr
+netifaces
+numpy
+oauthlib
+packaging
+pandas
+parso
+pexpect
+platformdirs
+pop-transition
+prompt_toolkit
+protobuf
+psutil
+ptyprocess
+pure_eval
+pycairo
+pycups
+pydbus
+Pygments
+PyGObject
+PyJWT
+pymacaroons
+PyNaCl
+pyparsing
+pyRFC3339
+python-apt
+python-dateutil
+python-debian
+python-gnupg
+python-slugify
+python-xlib
+pytz
+pyxdg
+PyYAML
+pyzmq
+repolib
+repoman
+requests
+screen-resolution-extra
+SecretStorage
+sessioninstaller
+six
+stack-data
+systemd-python
+text-unidecode
+tornado
+tqdm
+traitlets
+typing_extensions
+tzdata
+ubuntu-drivers-common
+ufw
+urllib3
+wadllib
+wcwidth
+webencodings
+Werkzeug
+xdg
+xkit
+zipp
